# doris-cli

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  cluster_store.rs  config.rs  main.rs  output.rs  release.rs  ssh.rs
src/client/: be.rs  fe.rs  mod.rs
src/commands/: cluster.rs  cluster_meta.rs  config_cmd.rs  mod.rs  ops.rs  profile.rs  scale.rs  version_gap.rs
src/commands/deploy/: detect.rs  lifecycle.rs  mod.rs
src/tui/: app.rs  data.rs  event.rs  mod.rs  sql.rs  ui.rs
